--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [package]
-name = "rust-learning"
+name    = "rust-learning"
 version = "0.1.0"
 authors = ["Jeff Sharp <jeff.sharp@git>"]
+build   = "build.rs"
+
+# LALRPOP
+[dependencies.lalrpop-util]
+version = "0.7.0"
+[build-dependencies.lalrpop]
+version = "0.7.0"
 
