--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Jeff Sharp <jeff.sharp@git>"]
 
 [dependencies]
-num = "0.1.32"
+byteorder = "0.5.3"
+num       = "0.1.36"
 
